--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,9 @@
 <body>
   <h1>webpack starter</h1>
   <p>✨ A lightweight foundation for your next webpack based frontend project.</p>
+  <div>
+  	<p>POKEMONS:</p>
+  	<ul id="pokemons"></ul>
+  </div>
 </body>
 </html>
